--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -43,6 +43,7 @@ a,a:focus,a:active {
     background: rgba(0,0,0,0.3);
     z-index: 9999;
     padding: 10px;
+    display: none;
 }
 
 .legend label,
